ErrorSheet
//Compile run 5/4/2020 @ 4:40 PM

testtt.c: In function ‘displayWins’:
testtt.c:444:1: error: version control conflict marker in file
 <<<<<<< HEAD
 ^~~~~~~
testtt.c:449:25: error: ‘names’ undeclared (first use in this function); did you mean ‘rename’?
  fscanf(wins, "%c %d", &names[11], &score[11]); //(names[] stores 11 items so it only looks for 10 items-ish (I think))
                         ^~~~~
                         rename
testtt.c:449:25: note: each undeclared identifier is reported only once for each function it appears in
testtt.c: In function ‘recordWin’:
testtt.c:16:17: error: expected identifier or ‘(’ before numeric constant
 #define maxName 50
                 ^
testtt.c:474:12: note: in expansion of macro ‘maxName’
 char name, maxName = 50; //what is going on with the maco here?
            ^~~~~~~
testtt.c:478:40: error: subscripted value is neither array nor pointer nor vector
   fprintf(wins, "%c %d", winnerName[11][maxName], score[11][2]);//array is: [max rows(no more than 10][max characters or integers in that row]
                                        ^
testtt.c: In function ‘getUserInput’:
testtt.c:506:19: error: expected expression before ‘]’ token
  updateArray(game[][size+1], position, turnCounter);
